# mximages-plone

./: Makefile
.github/workflows/: release.yaml
backend/: .gitignore  Dockerfile  Dockerfile.dockerignore  LICENSE.md  Makefile  constraints.txt  instance.yaml  mx.ini  pyproject.toml  requirements.txt  tox.ini
backend/scripts/: entrypoint.sh
frontend/: .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  package.json  pnpm-workspace.yaml  volto.config.js
